--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 5;
 
     .nav-menu {
         display: flex;
@@ -76,5 +77,11 @@
         img {
             width: 8rem;
         }
+    }
+}
+
+@media screen and (max-width: 340px) {
+    .header{
+        justify-content: flex-end;
     }
 }
