--- a/src/components/NewsArticle/NewsArticle.scss
+++ b/src/components/NewsArticle/NewsArticle.scss
@@ -1,5 +1,88 @@
-.news-article{
-    .article-image{
-        width: 3rem;
+.news-article {
+    width: 900px;
+    height: 270px;
+    background-color: #fff;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+    border-radius: 3px;
+    padding: 8px;
+    margin: auto;
+    box-sizing: border-box;
+    display: flex;
+    gap: 16px;
+    user-select: none;
+
+    .article-image {
+        width: 320px;
+        height: 100%;
+        border-radius: 4px;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .content {
+        width: 548px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        position: relative;
+
+        .title {
+            color: #44444d;
+            cursor: pointer;
+            font-size: 22px;
+            line-height: 27px;
+        }
+
+        .author-time {
+            font-size: 12px;
+            color: #808290;
+
+            b {
+                color: black;
+            }
+        }
+
+        .description {
+            margin: 0;
+            color: #4f4f4f;
+            font-size: 16px;
+            line-height: 22px;
+            margin-top: 8px;
+        }
+
+        .source {
+            position: absolute;
+            bottom: 0;
+            font-size: 12px;
+            margin-bottom: 8px;
+
+            .name{
+                text-decoration: none;
+                font-weight: bold;
+                color: black;
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 920px) {
+    .news-article {
+        width: 500px;
+        // width: 100%;
+        height: 600px;
+        flex-direction: column;
+
+        .article-image {
+            width: 100%;
+            height: 50%;
+        }
+
+        .content {
+            width: 100%;
+            height: 50%;
+        }
     }
 }
