--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,25 +1,51 @@
 .navbar {
     height: 100vh;
-    width: 12rem;
+    width: 13rem;
     background-color: #303036;
     color: white;
-    padding: 1rem 0.2rem;
+    padding: 1rem 0.5rem;
     box-sizing: border-box;
     transition: 0.3s;
     overflow: auto;
 
-    &::-webkit-scrollbar{
+    &::-webkit-scrollbar {
         display: none;
+    }
+
+    .language {
+        margin: 8px auto 1.5rem;
+        width: fit-content;
+        border: 1px solid #808290;
+        box-sizing: border-box;
+        border-radius: 3px;
+        font-size: 14px;
+        overflow: hidden;
+        display: flex;
+
+        a {
+            text-decoration: none;
+            color: #fff;
+            height: 32px;
+            width: 75px;
+            box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .active {
+            color: #303036;
+            background-color: #808290;
+        }
     }
 
     .nav-heading {
         width: 100%;
         display: inline-block;
         font-size: 13px;
+        font-weight: 300;
+        margin-top: 14px;
         opacity: 0.7;
-        border-bottom: 1px solid white;
-        padding-bottom: 0.5rem;
-        padding-left: 0.3rem;
         box-sizing: border-box;
         user-select: none;
     }
@@ -30,8 +56,8 @@
         flex-direction: column;
 
         a {
-            font-size: 14px;
-            font-weight: 100;
+            font-size: 15px;
+            font-weight: 300;
             text-decoration: none;
             color: rgba(255, 255, 255, 0.9);
             padding: 0.8rem 1rem;
@@ -41,7 +67,7 @@
             }
         }
 
-        .active{
+        .active {
             background-color: rgb(128, 130, 144);
 
             &:hover {
@@ -52,7 +78,7 @@
 
 }
 
-.close-navbar{
+.close-navbar {
     width: 0;
     opacity: 0;
     visibility: hidden;
