--- a/src/components/NewsArticle/NewsArticle.scss
+++ b/src/components/NewsArticle/NewsArticle.scss
@@ -7,12 +7,13 @@
     padding: 8px;
     margin: auto;
     box-sizing: border-box;
-    display: flex;
-    gap: 16px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 16px;
     user-select: none;
 
     .article-image {
-        width: 320px;
+        width: 100%;
         height: 100%;
         border-radius: 4px;
         background-position: center;
@@ -21,7 +22,7 @@
     }
 
     .content {
-        width: 548px;
+        width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -46,6 +47,7 @@
 
         .description {
             margin: 0;
+            margin-bottom: 2.5rem;
             color: #4f4f4f;
             font-size: 16px;
             line-height: 22px;
@@ -70,19 +72,10 @@
 
 @media screen and (max-width: 920px) {
     .news-article {
-        width: 500px;
-        // width: 100%;
-        height: 600px;
-        flex-direction: column;
-
-        .article-image {
-            width: 100%;
-            height: 50%;
-        }
-
-        .content {
-            width: 100%;
-            height: 50%;
-        }
+        max-width: 500px;
+        width: 100%;
+        min-height: 600px;
+        grid-template-columns: unset;
+        grid-template-rows: repeat(2, 1fr);
     }
 }
