--- a/src/components/NewsArticle/NewsArticle.scss
+++ b/src/components/NewsArticle/NewsArticle.scss
@@ -69,7 +69,6 @@
     }
 }
 
-
 @media screen and (max-width: 920px) {
     .news-article {
         max-width: 500px;
@@ -77,5 +76,42 @@
         min-height: 600px;
         grid-template-columns: unset;
         grid-template-rows: repeat(2, 1fr);
+    }
+}
+
+// mobile version
+.mobile-news-article {
+    width: 100%;
+    max-width: 100%;
+    height: 100vh;
+    padding: 0;
+    border-radius: 0;
+    box-shadow: none;
+    grid-template-columns: unset;
+    grid-template-rows: repeat(2, 1fr);
+
+    .article-image {
+        border-radius: 0;
+    }
+
+    .content {
+        padding: 0 8px;
+        box-sizing: border-box;
+
+        .title {
+            font-size: 16px;
+            line-height: 20px;
+        }
+
+        .description {
+            font-size: 14px;
+            line-height: 20px;
+            margin-bottom: 1rem;
+        }
+
+        .source {
+            position: relative;
+            margin-bottom: 0;
+        }
     }
 }
