--- a/src/pages/News/News.scss
+++ b/src/pages/News/News.scss
@@ -40,3 +40,20 @@
         margin: auto;
     }
 }
+
+// mobile version
+.mobile-news {
+    min-height: 100vh;
+    margin: auto;
+    max-width: 900px;
+
+    .articles {
+        display: block;
+        gap: 1.5rem;
+        margin-bottom: 0;
+    }
+    
+    .slick-vertical .slick-slide {
+        border: none;
+    }
+}
