article bottom section setup for mobil version

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -138,7 +138,7 @@
     transform: translate(-50%, 0);
 
     .footer {
-        padding: 8px;
+        padding: 16px 8px;
         display: block;
         color: rgb(182, 182, 182);
         text-align: center;
