--- a/src/components/NewsArticle/NewsArticle.scss
+++ b/src/components/NewsArticle/NewsArticle.scss
@@ -83,7 +83,7 @@
 .mobile-news-article {
     width: 100%;
     max-width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 0;
     border-radius: 0;
     box-shadow: none;
