--- a/src/pages/News/News.scss
+++ b/src/pages/News/News.scss
@@ -44,12 +44,11 @@
 // mobile version
 .mobile-news {
     width: 100%;
-    height: 100%;
-    // min-height: 100vh;
+    height: 100vh;
+    min-height: 100vh;
     margin: auto;
     max-width: 900px;
     overflow: auto;
-    position: absolute;
 
     .articles {
         display: block;
