--- a/src/pages/News/News.scss
+++ b/src/pages/News/News.scss
@@ -44,8 +44,8 @@
 // mobile version
 .mobile-news {
     width: 100%;
-    height: 100vh;
-    min-height: 100vh;
+    height: inherit;
+    min-height: inherit;
     margin: auto;
     max-width: 900px;
     overflow: auto;
