--- a/src/components/NewsArticle/NewsArticle.scss
+++ b/src/components/NewsArticle/NewsArticle.scss
@@ -129,7 +129,7 @@
         .image-link{
             font-size: 10px;
             text-decoration: none;
-            color: #9c9c9c;
+            color: white;
         }
     }
 }
