mobile navbar started

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -97,6 +97,7 @@
     max-width: 900px;
     box-shadow: none;
     background-color: rgba(255, 255, 255, 0.85);
+    position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
 
