--- a/src/pages/News/News.scss
+++ b/src/pages/News/News.scss
@@ -54,6 +54,7 @@
     margin: auto;
     max-width: 900px;
     overflow: hidden;
+    position: relative;
 
     .loader {
         position: absolute;
