--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -129,7 +129,7 @@
 // mobile version
 .mobile-footer-container {
     margin: 0;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     transition: 0.3s;
