nav of mobile view and slickGoTo functionality

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,6 +28,7 @@
             position: relative;
             top: 1.5rem;
             left: 1rem;
+            white-space: nowrap;
 
             .bar-container {
                 display: flex;
