--- a/src/components/MobileNav/MobileNav.scss
+++ b/src/components/MobileNav/MobileNav.scss
@@ -1,7 +1,7 @@
 .mobile-nav {
     width: 100%;
     position: relative;
-    padding: 0 16px;
+    padding: 0 16px 16px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
