--- a/src/pages/News/News.scss
+++ b/src/pages/News/News.scss
@@ -4,11 +4,6 @@
     flex-direction: column;
     margin-top: 6rem;
 
-    .loader {
-        width: 5rem;
-        margin: auto;
-    }
-
     .network-err {
         margin: auto;
         color: #f44336;
@@ -19,6 +14,11 @@
         flex-direction: column;
         gap: 1.5rem;
         margin-bottom: 2rem;
+
+        &+.rect-spinner .container .rect {
+            --size: 0.5em;
+            --offset: 12px;
+        }
     }
 
     .load-more {
@@ -38,11 +38,6 @@
         &:hover {
             box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
         }
-    }
-
-    .btn-loader {
-        width: 2rem;
-        margin: auto;
     }
 }
 
