--- a/src/pages/News/News.scss
+++ b/src/pages/News/News.scss
@@ -9,6 +9,31 @@
         color: #f44336;
     }
 
+    .bookmarks-err {
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        a {
+            text-decoration: none;
+            background-color: white;
+            color: black;
+            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+            padding: 8px 16px;
+            box-sizing: border-box;
+            border-radius: 6px;
+            text-align: center;
+            cursor: pointer;
+            transition: 0.25s;
+
+            &:hover {
+                box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
+            }
+        }
+    }
+
     .articles {
         display: flex;
         flex-direction: column;
