--- a/src/components/NewsArticle/NewsArticle.scss
+++ b/src/components/NewsArticle/NewsArticle.scss
@@ -36,9 +36,9 @@
 
         .title {
             color: #44444d;
-            cursor: pointer;
             font-size: 22px;
             line-height: 27px;
+            text-decoration: none;
         }
 
         .bookmark-article {
