--- a/src/components/NewsArticle/NewsArticle.scss
+++ b/src/components/NewsArticle/NewsArticle.scss
@@ -41,10 +41,6 @@
             text-decoration: none;
         }
 
-        .bookmark-article {
-            color: #369af8;
-        }
-
         .author-time {
             font-size: 12px;
             color: #808290;
@@ -119,6 +115,10 @@
             line-height: 20px;
         }
 
+        .bookmark-article {
+            color: #369af8;
+        }
+
         .description {
             font-size: 14px;
             line-height: 20px;
@@ -140,11 +140,30 @@
         box-sizing: border-box;
         line-height: 16px;
         position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
         .image-link {
             font-size: 10px;
             text-decoration: none;
             color: #fff;
+        }
+
+        .bookmark {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 10px;
+            gap: 8px;
+
+            i {
+                font-size: 16px;
+            }
+        }
+
+        .bookmark-article {
+            color: #369af8;
         }
 
         .bookmark-message {
