--- a/src/components/NewsArticle/NewsArticle.scss
+++ b/src/components/NewsArticle/NewsArticle.scss
@@ -136,7 +136,7 @@
         color: white;
         font-size: 12px;
         font-weight: 100;
-        padding: 8px;
+        padding: 8px 16px;
         box-sizing: border-box;
         line-height: 16px;
         position: relative;
