some footer css changes

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -54,7 +54,8 @@
                 }
 
                 .creator {
-                    color: inherit;
+                    color: #f44336;
+                    text-decoration: none;
                 }
             }
 
@@ -143,7 +144,8 @@
         text-align: center;
 
         .creator {
-            color: rgb(182, 182, 182);
+            color: #f44336;
+            text-decoration: none;
         }
     }
 }
